# geope

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy-docs.yml  notebooks.yml  release.yml  tests.yml
api/: index.html
api/dexpm/: index.html
api/engine/: index.html
api/gecko/: index.html
api/geope/: index.html
api/grape/: index.html
api/jacobian/: index.html
api/jacobian_manual/: index.html
api/lie/: index.html
api/logm/: index.html
api/parameters/: index.html
api/pauli_projector/: index.html
api/utils/: index.html
benchmarks/: conftest.py  test_bench_d2expm.py  test_bench_dexpm.py  test_bench_hessian.py  test_bench_jacobian.py
docs/: index.md  user_guide.md
docs/_static/: mathjax.js
docs/api/: dexpm.md  engine.md  gecko.md  geope.md  grape.md  index.md  jacobian.md  jacobian_manual.md  lie.md  logm.md  parameters.md  pauli_projector.md  utils.md
docs/examples/: getting_started.ipynb  notebook.ipynb  pulse_smoothing.ipynb
examples/getting_started/: index.html
examples/notebook/: index.html
examples/pulse_smoothing/: index.html
install/: index.html
search/: search_index.json
src/geope/: __init__.py  dexpm.py  engine.py  gecko.py  geope.py  grape.py  history.py  jacobian_manual.py  lie.py  line_searches.py  logm.py  parameters.py  pauli_projector.py  utils.py
src/geope/jax/: __init__.py  dexpm.py  hessian.py  jacobian.py  logm.py
src/geope/lie/: __init__.py  basis.py  hamiltonian.py  pauli_projector.py  unitary.py
src/geope/utils/: __init__.py  history.py  utils.py
tests/: conftest.py  test_engine.py  test_factories.py  test_geope.py  test_grape.py  test_lie.py  test_notebooks.py  test_utils.py
user_guide/: index.html
