[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "GEOPE"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = [
    "jax==0.8.0",
    "optax==0.2.4",
    "matplotlib==3.10.7",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "pandas==2.3.3",
    "bayesian-optimization==2.0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    # JAX casts complex cotangents to real inside its own backward pass when
    # differentiating the real-valued fidelity through a complex unitary back
    # to real parameters. This cannot be addressed at our call site.
    "ignore:Casting complex values to real discards the imaginary part:numpy.exceptions.ComplexWarning:jax._src.lax.lax",
]

[project.optional-dependencies]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.23",
    "mkdocstrings==0.30.1",
    "mkdocs-exclude==1.0.2",
    "mkdocs-ipynb==0.1.1",
    "hippogriffe==0.2.2",
]