[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "GEOPE"
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "jax==0.8.0",
    "optax==0.2.4",
    "matplotlib==3.10.7",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "pandas==2.3.3",
    "bayesian-optimization==2.0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Default `pytest` runs only the test suite; benchmarks/ is opt-in and is run
# explicitly (`pytest benchmarks/`, requires the [benchmark] extra).
testpaths = ["tests"]
filterwarnings = [
    "ignore:Casting complex values to real discards the imaginary part:numpy.exceptions.ComplexWarning:jax._src.lax.lax",
]

[project.optional-dependencies]
dev = ["pre-commit==3.7.0", "pytest==9.0.3", "pytest-benchmark==5.1.0", "black==24.3.0"]

docs = [
    "pytest==9.0.3",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.23",
    "mkdocstrings==0.30.1",
    "mkdocs-exclude==1.0.2",
    "mkdocs-ipynb==0.1.1",
    "hippogriffe==0.2.2",
]
