[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "GEOPE"
version = "0.0.4"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "jax==0.8.0",
    "optax==0.2.4",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "pandas==2.3.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Default `pytest` runs only the test suite; benchmarks/ is opt-in and is run
# explicitly (`pytest benchmarks/`, requires the [benchmark] extra).
testpaths = ["tests"]
# Notebook-execution tests are heavy and excluded from the standard suite; they
# run only in the release pipeline (`pytest -m notebooks`, see release.yml).
addopts = "-m 'not notebooks'"
markers = [
    "notebooks: end-to-end execution of the example notebooks (run with '-m notebooks')",
]
filterwarnings = [
    "ignore:Casting complex values to real discards the imaginary part:numpy.exceptions.ComplexWarning:jax._src.lax.lax",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.7.0",
    "pytest==9.0.3",
    "pytest-benchmark==5.1.0",
    "black==24.3.0",
    # Notebook execution tests (tests/test_notebooks.py).
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "ipykernel==6.30.1",
    "matplotlib==3.10.7",
]

docs = [
    "matplotlib==3.10.7",
    "pytest==9.0.3",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.23",
    "mkdocstrings==0.30.1",
    "mkdocs-exclude==1.0.2",
    "mkdocs-ipynb==0.1.1",
    "hippogriffe==0.2.2",
]
